# MyGIMP

./: .gitignore  Action_8hpp_source.html  CMakeLists.txt  CanvasWidget_8hpp_source.html  CheckBoardScrollablePanel_8hpp_source.html  ColorPick_8hpp_source.html  Color_8hpp_source.html  CopyOperation_8hpp_source.html  CutOperation_8hpp_source.html  DecreaseGrid_8hpp_source.html  DelSelectionOperation_8hpp_source.html  Doxyfile  DrawGrid_8hpp_source.html  Editor_8hpp_source.html  Effect_8hpp_source.html  Effects_8hpp_source.html  EllipseSelectionTool_8hpp_source.html  Enum_8hpp_source.html  Eraser_8hpp_source.html  Exceptions_8hpp_source.html  ExpandMoreSelection_8hpp_source.html  ExpandSelection_8hpp_source.html  FillSelectionOperation_8hpp_source.html  FillSelection_8hpp_source.html  Fill_8hpp_source.html  Finger_8hpp_source.html  FrameBufferSnapshot_8hpp_source.html  FrameBuffer_8hpp_source.html  ImageOperationFactory_8hpp_source.html  ImageOperation_8hpp_source.html  Image_8hpp_source.html  IncreaseGrid_8hpp_source.html  InvertSelectionOperation_8hpp_source.html  KeyWidget_8hpp_source.html  Keys_8hpp_source.html  Lasso_8hpp_source.html  LayerManagerSnapshot_8hpp_source.html  LayerManager_8hpp_source.html  LayerSnapshot_8hpp_source.html  LayerWidget_8hpp_source.html  (+313 more)
.github/workflows/: doc.yml
doc/html/: CanvasWidget_8hpp_source.html  Color_8hpp_source.html  Editor_8hpp_source.html  Exceptions_8hpp_source.html  Fill_8hpp_source.html  FrameBuffer_8hpp_source.html  Image_8hpp_source.html  LayerManager_8hpp_source.html  Layer_8hpp_source.html  MouseClick_8hpp_source.html  Pencil_8hpp_source.html  SelectedArea_8hpp_source.html  ToolBox_8hpp_source.html  ToolFactory_8hpp_source.html  Tool_8hpp_source.html  Utils_8hpp_source.html  Vector2_8hpp_source.html  annotated.html  classMimp_1_1BaseException-members.html  classMimp_1_1BaseException.html  classMimp_1_1CanvasWidget-members.html  classMimp_1_1CanvasWidget.html  classMimp_1_1CorruptedGuiFileException-members.html  classMimp_1_1CorruptedGuiFileException.html  classMimp_1_1Editor-members.html  classMimp_1_1Editor.html  classMimp_1_1ExportErrorException-members.html  classMimp_1_1ExportErrorException.html  classMimp_1_1Fill-members.html  classMimp_1_1Fill.html  classMimp_1_1FrameBuffer-members.html  classMimp_1_1FrameBuffer.html  classMimp_1_1Image-members.html  classMimp_1_1Image.html  classMimp_1_1InvalidArgumentException-members.html  classMimp_1_1InvalidArgumentException.html  classMimp_1_1InvalidImageException-members.html  classMimp_1_1InvalidImageException.html  classMimp_1_1LayerManager-members.html  classMimp_1_1LayerManager.html  (+31 more)
doc/latex/: annotated.tex  classMimp_1_1BaseException.eps  classMimp_1_1BaseException.tex  classMimp_1_1CanvasWidget.eps  classMimp_1_1CanvasWidget.tex  classMimp_1_1CorruptedGuiFileException.eps  classMimp_1_1CorruptedGuiFileException.tex  classMimp_1_1Editor.tex  classMimp_1_1ExportErrorException.eps  classMimp_1_1ExportErrorException.tex  classMimp_1_1Fill.eps  classMimp_1_1Fill.tex  classMimp_1_1FrameBuffer.tex  classMimp_1_1Image.eps  classMimp_1_1Image.tex  classMimp_1_1InvalidArgumentException.eps  classMimp_1_1InvalidArgumentException.tex  classMimp_1_1InvalidImageException.eps  classMimp_1_1InvalidImageException.tex  classMimp_1_1LayerManager.tex  classMimp_1_1OutOfBoundException.eps  classMimp_1_1OutOfBoundException.tex  classMimp_1_1Pencil.eps  classMimp_1_1Pencil.tex  classMimp_1_1SelectedArea.tex  classMimp_1_1Tool.eps  classMimp_1_1Tool.tex  classMimp_1_1ToolBox.tex  classMimp_1_1ToolFactory.tex  hierarchy.tex  refman.tex  structMimp_1_1Color.tex  structMimp_1_1Layer.tex  structMimp_1_1Vector2.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+46 more)
src/: Action.hpp  CanvasWidget.cpp  CanvasWidget.hpp  Editor.cpp  Editor.hpp  Enum.hpp  Exceptions.hpp  Image.cpp  Image.hpp  ImageEditorWidget.cpp  ImageEditorWidget.hpp  KeyWidget.cpp  KeyWidget.hpp  Keys.cpp  Keys.hpp  LayerWidget.cpp  LayerWidget.hpp  SelectedArea.cpp  SelectedArea.hpp  ShortcutComparator.hpp  ShortcutManager.cpp  ShortcutManager.hpp  ToolBox.cpp  ToolBox.hpp  Utils.cpp  Utils.hpp  main.cpp
src/Data/: Color.cpp  Color.hpp  MouseClick.hpp  Vector2.hpp
src/ImageOperations/: Effects.cpp  Effects.hpp  ImageOperation.cpp  ImageOperation.hpp  ImageOperationFactory.cpp  ImageOperationFactory.hpp  Redo.cpp  Redo.hpp  Undo.cpp  Undo.hpp
src/Layer/: FrameBuffer.cpp  FrameBuffer.hpp  Layer.cpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp
src/Network/: Exceptions.hpp  SecuredSocket.cpp  SecuredSocket.hpp  Socket.cpp  Socket.hpp
src/Snapshot/: FrameBufferSnapshot.cpp  FrameBufferSnapshot.hpp  LayerManagerSnapshot.cpp  LayerManagerSnapshot.hpp  LayerSnapshot.cpp  LayerSnapshot.hpp  SelectionSnapshot.cpp  SelectionSnapshot.hpp  Snapshot.hpp
src/Tools/: ColorPick.cpp  ColorPick.hpp  ElipseSelectionTool.cpp  ElipseSelectionTool.hpp  EllipseSelectionTool.cpp  (+36 more)
tests/: FrameBufferTest.cpp  ImageTests.cpp  LayerManagerTest.cpp  LayerTest.cpp  SelectedAreaTests.cpp  ToolBoxTests.cpp  UtilsTests.cpp  communism.hpp
tst/: CanvasWidget.cpp  Color.cpp  Editor.cpp  Exceptions.cpp  FrameBuffer.cpp  Image.cpp  KeyWidget.cpp  Keys.cpp  Layer.cpp  LayerManager.cpp  LayerWidget.cpp  SecuredSocket.cpp  SelectedArea.cpp  Socket.cpp  ToolBox.cpp  Utils.cpp  Vector.cpp  _FrameBufferTest.cpp  _ImageTests.cpp  _LayerManagerTest.cpp  _LayerTest.cpp  _SelectedAreaTests.cpp  _ToolBoxTests.cpp  _UtilsTests.cpp
widgets/: about.gui  color.gui  colords.gui  context_box.gui  effects.gui  import_link.gui  new.gui  not_saved.gui  open_file_dialog.gui  rename.gui  shortcut.gui  shortcuts.gui  tool_box.gui  top_menu.gui
(+175 files in other folders)
